--- a/style.css
+++ b/style.css
@@ -1,3 +1,14 @@
 body{
-	background-color:green;
+	background-color: #eee;
+}
+
+.about-section{
+	background-color: #333;
+	color: white;
+	padding: 50px;
+}
+
+.photo-banner{
+	height: 200px;
+	background-image: url(http://hackingdistributed.com/images/2014-01-01-bitcoin/chain3.jpg);
 }
