--- a/sources/style.css
+++ b/sources/style.css
@@ -3,13 +3,18 @@ body{
 }
 
 .about-section{
-	background-color: #333;
-	color: white;
+	background-color: #fff;
+	color: black;
 	padding: 50px;
 }
 .photo-banner{
 	height: 200px;
 	background-image: url(http://hackingdistributed.com/images/2014-01-01-bitcoin/chain3.jpg);
+}
+.splash-photo{
+	background-image: url('img/selectedPhotos/IMG_3544.jpg');
+	background-size: 100%;
+	height: 90vh;
 }
  .carousel-inner > .item > img,
  .carousel-inner > .item > a > img {
