fix merge conflict with gallery. Add gallery

--- a/sources/style.css
+++ b/sources/style.css
@@ -57,6 +57,21 @@ body{
 	background-size: 100%;
 }
 
+/* GALLERY */
+#gallery {
+	max-width: 100% !important;
+    width: 100% !important;
+    /*height: 300px;*/
+}
+
+.ug-arrow-right.ug-skin-default {
+    background-image: url('img/arrows-right.png');
+}
+
+.ug-arrow-left.ug-skin-default {
+    background-image: url('img/arrows-left.png');
+
+
 /* responsive */
 @media(min-width:768px){
 	.navbar{
